fix(ux): improve spacing of grid

--- a/src/assets/styles/core/_variables.scss
+++ b/src/assets/styles/core/_variables.scss
@@ -59,7 +59,7 @@ $width-xl: 1800px !default;
 
 // grids
 $cell-md: 20rem !default;
-$cell-lg: 24rem !default;
+$cell-lg: 25rem !default;
 
 $line-height-rg: 1.6 !default;
 
@@ -77,7 +77,7 @@ $gap-xl: 2rem !default;
 $gap-2xl: 3rem !default;
 $gap-3xl: 5rem !default;
 
-$expanse-container-rg: 75vw !default;
+$expanse-container-rg: 85vw !default;
 $expanse-container-ws: 60vw !default;
 $expanse-article: 60vw !default;
 $expanse-base: $gap-2xl !default;
