--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,6 +26,13 @@
   }
 }
 
+.wrapper {
+  @include queries.tab-portrait {
+    padding-right: variables.$expanse-base;
+    padding-left: variables.$expanse-base;
+  }
+}
+
 .panel {
   display: block;
   overflow: hidden;
@@ -286,7 +293,7 @@ $hamburger-layer-spacing: 6px !default;
     @include queries.tab-portrait {
       margin-top: -(variables.$expanse-base / 2);
       padding-right: variables.$expanse-base;
-      padding-left: variables.$expanse-base;
+      padding-left: 0;
       margin-bottom: variables.$expanse-base / 2;
     }
 
@@ -524,7 +531,7 @@ $hamburger-layer-spacing: 6px !default;
   @include mixins.center(nowrap, flex-start);
 
   @include queries.tab-portrait {
-    padding: variables.$gap-2xl variables.$expanse-base 0;
+    padding: variables.$gap-2xl variables.$expanse-base 0 0;
   }
 
   & > a {
